alignment correcting

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ table{
     line-height: 40px;
     margin-left: 20px;
     border-collapse: collapse;
-    text-align: center;
+    text-align: left;
 }
 thead{
     background-color: lightgray;
@@ -72,11 +72,11 @@ tbody tr:nth-child(even){
     margin-top: 20px;
 }
 .about{
-    margin-top: 20px;
+    width: 80%;
     word-spacing: 10px;
     line-height: 2;
     font-size: large;
-    text-align: center;
+    margin: auto;
 }
 #para{
     margin-top: 20px;
